// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshots > should match snapshot in card variant 1`] = `
<div
  class="rounded-xl border bg-card text-card-foreground shadow"
>
  <div
    class="flex flex-col space-y-1.5 p-6 pb-2"
  >
    <div
      class="font-semibold tracking-tight text-lg"
    >
      Detailed Analysis
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="w-full"
      data-orientation="horizontal"
      data-testid="modality-tabs"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="h-10 items-center justify-center rounded-md bg-muted p-1 text-muted-foreground grid w-full grid-cols-1"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-:r31:-content-video"
          aria-selected="true"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm gap-2 relative"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          data-testid="modality-tab-video"
          id="radix-:r31:-trigger-video"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-video h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m16 13 5.223 3.482a.5.5 0 0 0 .777-.416V7.87a.5.5 0 0 0-.752-.432L16 10.5"
            />
            <rect
              height="12"
              rx="2"
              width="14"
              x="2"
              y="6"
            />
          </svg>
          <span
            class="hidden sm:inline"
          >
            Video
          </span>
          <div
            class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-secondary/80 ml-1 text-xs px-1.5 py-0 bg-lime-500/10 text-lime-700 dark:text-lime-400"
          >
            75
          </div>
        </button>
      </div>
      <div
        class="mt-4"
      >
        <div
          aria-labelledby="radix-:r31:-trigger-video"
          class="mt-2 ring-offset-background focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:outline-none"
          data-orientation="horizontal"
          data-state="active"
          data-testid="modality-panel-video"
          id="radix-:r31:-content-video"
          role="tabpanel"
          style="animation-duration: 0s;"
          tabindex="0"
        >
          <div
            data-testid="video-panel-mock"
          >
            Video Panel - Analysis ID: 
            test-analysis-123
            , Score: 
            0.75
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshots > should match snapshot in empty state 1`] = `
<div
  class="py-8 text-center"
  data-testid="modality-tabs-empty"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-info h-10 w-10 mx-auto mb-3 text-muted-foreground/40"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 16v-4"
    />
    <path
      d="M12 8h.01"
    />
  </svg>
  <p
    class="text-muted-foreground font-medium mb-1"
  >
    No Detailed Analysis Available
  </p>
  <p
    class="text-sm text-muted-foreground/70"
  >
    Modality-specific analysis results will appear here once processing is complete.
  </p>
</div>
`;

exports[`Snapshots > should match snapshot with all modalities 1`] = `
<div
  class="w-full"
  data-orientation="horizontal"
  data-testid="modality-tabs"
  dir="ltr"
>
  <div
    aria-orientation="horizontal"
    class="h-10 items-center justify-center rounded-md bg-muted p-1 text-muted-foreground grid w-full grid-cols-4"
    data-orientation="horizontal"
    role="tablist"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-controls="radix-:r2s:-content-video"
      aria-selected="true"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm gap-2 relative"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="active"
      data-testid="modality-tab-video"
      id="radix-:r2s:-trigger-video"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-video h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m16 13 5.223 3.482a.5.5 0 0 0 .777-.416V7.87a.5.5 0 0 0-.752-.432L16 10.5"
        />
        <rect
          height="12"
          rx="2"
          width="14"
          x="2"
          y="6"
        />
      </svg>
      <span
        class="hidden sm:inline"
      >
        Video
      </span>
      <div
        class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-secondary/80 ml-1 text-xs px-1.5 py-0 bg-lime-500/10 text-lime-700 dark:text-lime-400"
      >
        75
      </div>
    </button>
    <button
      aria-controls="radix-:r2s:-content-audio"
      aria-selected="false"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm gap-2 relative"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="inactive"
      data-testid="modality-tab-audio"
      id="radix-:r2s:-trigger-audio"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-audio-lines h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 10v3"
        />
        <path
          d="M6 6v11"
        />
        <path
          d="M10 3v18"
        />
        <path
          d="M14 8v7"
        />
        <path
          d="M18 5v13"
        />
        <path
          d="M22 10v3"
        />
      </svg>
      <span
        class="hidden sm:inline"
      >
        Audio
      </span>
      <div
        class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-secondary/80 ml-1 text-xs px-1.5 py-0 bg-green-500/10 text-green-700 dark:text-green-400"
      >
        82
      </div>
    </button>
    <button
      aria-controls="radix-:r2s:-content-text"
      aria-selected="false"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm gap-2 relative"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="inactive"
      data-testid="modality-tab-text"
      id="radix-:r2s:-trigger-text"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-file-text h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
        <path
          d="M10 9H8"
        />
        <path
          d="M16 13H8"
        />
        <path
          d="M16 17H8"
        />
      </svg>
      <span
        class="hidden sm:inline"
      >
        Text
      </span>
      <div
        class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-secondary/80 ml-1 text-xs px-1.5 py-0 bg-green-500/10 text-green-700 dark:text-green-400"
      >
        90
      </div>
    </button>
    <button
      aria-controls="radix-:r2s:-content-metadata"
      aria-selected="false"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm gap-2 relative"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="inactive"
      data-testid="modality-tab-metadata"
      id="radix-:r2s:-trigger-metadata"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-file-search-corner h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.1 22H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.706.706l3.589 3.588A2.4 2.4 0 0 1 20 8v3.25"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
        <path
          d="m21 22-2.88-2.88"
        />
        <circle
          cx="16"
          cy="17"
          r="3"
        />
      </svg>
      <span
        class="hidden sm:inline"
      >
        Meta
      </span>
      <div
        class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-secondary/80 ml-1 text-xs px-1.5 py-0 bg-green-500/10 text-green-700 dark:text-green-400"
      >
        95
      </div>
    </button>
  </div>
  <div
    class="mt-4"
  >
    <div
      aria-labelledby="radix-:r2s:-trigger-video"
      class="mt-2 ring-offset-background focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:outline-none"
      data-orientation="horizontal"
      data-state="active"
      data-testid="modality-panel-video"
      id="radix-:r2s:-content-video"
      role="tabpanel"
      style="animation-duration: 0s;"
      tabindex="0"
    >
      <div
        data-testid="video-panel-mock"
      >
        Video Panel - Analysis ID: 
        test-analysis-123
        , Score: 
        0.75
      </div>
    </div>
    <div
      aria-labelledby="radix-:r2s:-trigger-audio"
      class="mt-2 ring-offset-background focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:outline-none"
      data-orientation="horizontal"
      data-state="inactive"
      data-testid="modality-panel-audio"
      hidden=""
      id="radix-:r2s:-content-audio"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="radix-:r2s:-trigger-text"
      class="mt-2 ring-offset-background focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:outline-none"
      data-orientation="horizontal"
      data-state="inactive"
      data-testid="modality-panel-text"
      hidden=""
      id="radix-:r2s:-content-text"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="radix-:r2s:-trigger-metadata"
      class="mt-2 ring-offset-background focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:outline-none"
      data-orientation="horizontal"
      data-state="inactive"
      data-testid="modality-panel-metadata"
      hidden=""
      id="radix-:r2s:-content-metadata"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Snapshots > should match snapshot with single modality 1`] = `
<div
  class="w-full"
  data-orientation="horizontal"
  data-testid="modality-tabs"
  dir="ltr"
>
  <div
    aria-orientation="horizontal"
    class="h-10 items-center justify-center rounded-md bg-muted p-1 text-muted-foreground grid w-full grid-cols-1"
    data-orientation="horizontal"
    role="tablist"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-controls="radix-:r2q:-content-video"
      aria-selected="true"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm gap-2 relative"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="active"
      data-testid="modality-tab-video"
      id="radix-:r2q:-trigger-video"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-video h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m16 13 5.223 3.482a.5.5 0 0 0 .777-.416V7.87a.5.5 0 0 0-.752-.432L16 10.5"
        />
        <rect
          height="12"
          rx="2"
          width="14"
          x="2"
          y="6"
        />
      </svg>
      <span
        class="hidden sm:inline"
      >
        Video
      </span>
      <div
        class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-secondary/80 ml-1 text-xs px-1.5 py-0 bg-lime-500/10 text-lime-700 dark:text-lime-400"
      >
        75
      </div>
    </button>
  </div>
  <div
    class="mt-4"
  >
    <div
      aria-labelledby="radix-:r2q:-trigger-video"
      class="mt-2 ring-offset-background focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:outline-none"
      data-orientation="horizontal"
      data-state="active"
      data-testid="modality-panel-video"
      id="radix-:r2q:-content-video"
      role="tabpanel"
      style="animation-duration: 0s;"
      tabindex="0"
    >
      <div
        data-testid="video-panel-mock"
      >
        Video Panel - Analysis ID: 
        test-analysis-123
        , Score: 
        0.75
      </div>
    </div>
  </div>
</div>
`;
